Fix spacing issues

--- a/challenges/faq_accordion_card/style.css
+++ b/challenges/faq_accordion_card/style.css
@@ -3,33 +3,34 @@
 @tailwind utilities;
 
 @layer components {
-  img { 
-    @apply block; 
+  img {
+    @apply block w-full;
   }
 
   .faq-query {
-    @apply grid border-b border-light-grayish-blue py-3 px-1 mb-2;
-    grid-template-areas: 
-    "title btn"
-    "answer answer";
+    @apply border-light-grayish-blue mb-2 grid border-b py-3 px-1 md:p-3;
+    grid-template-areas:
+      'title btn'
+      'answer answer';
   }
 
   .faq-title {
-    @apply whitespace-nowrap pb-2 hover:cursor-pointer hover:text-soft-red transition ease-in duration-300;
+    @apply hover:text-soft-red whitespace-nowrap pb-2 transition duration-300 ease-in hover:cursor-pointer;
     grid-area: title;
   }
 
   .faq-title-bold {
-    @apply font-bold text-very-dark-desat-blue text-sm whitespace-nowrap pb-2 transition ease-in duration-300;
+    @apply text-very-dark-desat-blue whitespace-nowrap pb-2 text-sm font-bold transition duration-300 ease-in;
     grid-area: title;
   }
 
   .faq-answer {
+    @apply leading-5;
     grid-area: answer;
   }
 
   .arrow-btn {
-    @apply justify-self-end;                                
+    @apply justify-self-end;
     grid-area: btn;
   }
 }
